// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:anchorNav 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-AnchorNav cxd-AnchorNav--vertical"
          >
            <ul
              class="cxd-AnchorNav-link-wrap linksWrap"
              role="anchorlist"
            >
              <li
                class="cxd-AnchorNav-link is-active"
              >
                <a
                  title="基本信息"
                >
                  基本信息
                </a>
              </li>
              <li
                class="cxd-AnchorNav-link"
              >
                <a
                  title="工作信息"
                >
                  工作信息
                </a>
              </li>
              <li
                class="cxd-AnchorNav-link"
              >
                <a
                  title="兴趣爱好"
                >
                  兴趣爱好
                </a>
              </li>
            </ul>
            <div
              class="cxd-AnchorNav-section-wrap sectionsWrap"
            >
              <div
                class="cxd-AnchorNav-section"
                data-id="0"
              >
                <div
                  class="cxd-Panel cxd-Panel--default cxd-Panel--form"
                  data-role="container"
                >
                  <div
                    class="cxd-Panel-heading"
                  >
                    <h3
                      class="cxd-Panel-title"
                    >
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          基本信息
                        </span>
                      </span>
                    </h3>
                  </div>
                  <div
                    class="cxd-Panel-body"
                  >
                    <form
                      class="cxd-Form cxd-Form--normal"
                      novalidate=""
                    >
                      <input
                        style="display: none;"
                        type="submit"
                      />
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="name"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                姓名：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="name"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="email"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                邮箱：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="email"
                              placeholder=""
                              size="10"
                              type="email"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                  <div
                    class="cxd-Panel-footerWrap"
                  >
                    <div
                      class="cxd-Panel-btnToolbar cxd-Panel-footer"
                    >
                      <button
                        class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                        type="submit"
                      >
                        <span>
                          提交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cxd-AnchorNav-section"
                data-id="1"
              >
                <div
                  class="cxd-Panel cxd-Panel--default cxd-Panel--form"
                  data-role="container"
                >
                  <div
                    class="cxd-Panel-heading"
                  >
                    <h3
                      class="cxd-Panel-title"
                    >
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          工作信息
                        </span>
                      </span>
                    </h3>
                  </div>
                  <div
                    class="cxd-Panel-body"
                  >
                    <form
                      class="cxd-Form cxd-Form--normal"
                      novalidate=""
                    >
                      <input
                        style="display: none;"
                        type="submit"
                      />
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="cname"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                公司名称：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="cname"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="caddress"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                公司地址：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="caddress"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                  <div
                    class="cxd-Panel-footerWrap"
                  >
                    <div
                      class="cxd-Panel-btnToolbar cxd-Panel-footer"
                    >
                      <button
                        class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                        type="submit"
                      >
                        <span>
                          提交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cxd-AnchorNav-section"
                data-id="2"
              >
                <div
                  class="cxd-Panel cxd-Panel--default cxd-Panel--form"
                  data-role="container"
                >
                  <div
                    class="cxd-Panel-heading"
                  >
                    <h3
                      class="cxd-Panel-title"
                    >
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          兴趣爱好
                        </span>
                      </span>
                    </h3>
                  </div>
                  <div
                    class="cxd-Panel-body"
                  >
                    <form
                      class="cxd-Form cxd-Form--normal"
                      novalidate=""
                    >
                      <input
                        style="display: none;"
                        type="submit"
                      />
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="interest1"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                兴趣爱好1：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="interest1"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="interest2"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                兴趣爱好2：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="interest2"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="interest3"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                兴趣爱好3：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="interest3"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="interest4"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                兴趣爱好4：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="interest4"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="interest5"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                兴趣爱好5：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="interest5"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="interest6"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                兴趣爱好6：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="interest6"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                  <div
                    class="cxd-Panel-footerWrap"
                  >
                    <div
                      class="cxd-Panel-btnToolbar cxd-Panel-footer"
                    >
                      <button
                        class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                        type="submit"
                      >
                        <span>
                          提交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:anchorNav with children 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-AnchorNav cxd-AnchorNav--horizontal"
          >
            <ul
              class="cxd-AnchorNav-link-wrap"
              role="anchorlist"
            >
              <li
                class="cxd-AnchorNav-link is-active"
              >
                <a
                  title="基本信息"
                >
                  基本信息
                </a>
              </li>
              <li
                class="cxd-AnchorNav-link cxd-AnchorNav-link-child"
              >
                <a
                  title="基本信息1-1"
                >
                  基本信息1-1
                </a>
              </li>
              <li
                class="cxd-AnchorNav-link cxd-AnchorNav-link-child"
              >
                <a
                  title="基本信息1-2"
                >
                  基本信息1-2
                </a>
              </li>
              <li
                class="cxd-AnchorNav-link"
              >
                <a
                  title="工作信息"
                >
                  工作信息
                </a>
              </li>
            </ul>
            <div
              class="cxd-AnchorNav-section-wrap"
            >
              <div
                class="cxd-AnchorNav-section"
                data-id="0"
              >
                <div
                  class="cxd-Panel cxd-Panel--default cxd-Panel--form"
                  data-role="container"
                >
                  <div
                    class="cxd-Panel-heading"
                  >
                    <h3
                      class="cxd-Panel-title"
                    >
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          基本信息
                        </span>
                      </span>
                    </h3>
                  </div>
                  <div
                    class="cxd-Panel-body"
                  >
                    <form
                      class="cxd-Form cxd-Form--normal"
                      novalidate=""
                    >
                      <input
                        style="display: none;"
                        type="submit"
                      />
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="name"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                姓名：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="name"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="email"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                邮箱：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="email"
                              placeholder=""
                              size="10"
                              type="email"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                  <div
                    class="cxd-Panel-footerWrap"
                  >
                    <div
                      class="cxd-Panel-btnToolbar cxd-Panel-footer"
                    >
                      <button
                        class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                        type="submit"
                      >
                        <span>
                          提交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cxd-AnchorNav-section"
                data-id="0-0"
              >
                <div
                  class="cxd-Panel cxd-Panel--default cxd-Panel--form"
                  data-role="container"
                >
                  <div
                    class="cxd-Panel-heading"
                  >
                    <h3
                      class="cxd-Panel-title"
                    >
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          基本信息1-1
                        </span>
                      </span>
                    </h3>
                  </div>
                  <div
                    class="cxd-Panel-body"
                  >
                    <form
                      class="cxd-Form cxd-Form--normal"
                      novalidate=""
                    >
                      <input
                        style="display: none;"
                        type="submit"
                      />
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="cname1"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                cname1
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="cname1"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="caddress1"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                caddress1
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="caddress1"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                  <div
                    class="cxd-Panel-footerWrap"
                  >
                    <div
                      class="cxd-Panel-btnToolbar cxd-Panel-footer"
                    >
                      <button
                        class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                        type="submit"
                      >
                        <span>
                          提交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cxd-AnchorNav-section"
                data-id="0-1"
              >
                <div
                  class="cxd-Panel cxd-Panel--default cxd-Panel--form"
                  data-role="container"
                >
                  <div
                    class="cxd-Panel-heading"
                  >
                    <h3
                      class="cxd-Panel-title"
                    >
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          基本信息1-2
                        </span>
                      </span>
                    </h3>
                  </div>
                  <div
                    class="cxd-Panel-body"
                  >
                    <form
                      class="cxd-Form cxd-Form--normal"
                      novalidate=""
                    >
                      <input
                        style="display: none;"
                        type="submit"
                      />
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="cname2"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                cname2
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="cname2"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="caddress2"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                caddress2
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="caddress2"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                  <div
                    class="cxd-Panel-footerWrap"
                  >
                    <div
                      class="cxd-Panel-btnToolbar cxd-Panel-footer"
                    >
                      <button
                        class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                        type="submit"
                      >
                        <span>
                          提交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cxd-AnchorNav-section"
                data-id="1"
              >
                <div
                  class="cxd-Panel cxd-Panel--default cxd-Panel--form"
                  data-role="container"
                >
                  <div
                    class="cxd-Panel-heading"
                  >
                    <h3
                      class="cxd-Panel-title"
                    >
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          工作信息
                        </span>
                      </span>
                    </h3>
                  </div>
                  <div
                    class="cxd-Panel-body"
                  >
                    <form
                      class="cxd-Form cxd-Form--normal"
                      novalidate=""
                    >
                      <input
                        style="display: none;"
                        type="submit"
                      />
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="cname"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                公司名称：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="cname"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="caddress"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                公司地址：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="caddress"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                  <div
                    class="cxd-Panel-footerWrap"
                  >
                    <div
                      class="cxd-Panel-btnToolbar cxd-Panel-footer"
                    >
                      <button
                        class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                        type="submit"
                      >
                        <span>
                          提交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:anchorNav with horizontal 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-AnchorNav cxd-AnchorNav--horizontal"
          >
            <ul
              class="cxd-AnchorNav-link-wrap"
              role="anchorlist"
            >
              <li
                class="cxd-AnchorNav-link is-active"
              >
                <a
                  title="基本信息"
                >
                  基本信息
                </a>
              </li>
            </ul>
            <div
              class="cxd-AnchorNav-section-wrap"
            >
              <div
                class="cxd-AnchorNav-section"
                data-id="0"
              >
                <div
                  class="cxd-Panel cxd-Panel--default cxd-Panel--form"
                  data-role="container"
                >
                  <div
                    class="cxd-Panel-heading"
                  >
                    <h3
                      class="cxd-Panel-title"
                    >
                      <span
                        class="cxd-TplField fr-view"
                      >
                        <span>
                          基本信息
                        </span>
                      </span>
                    </h3>
                  </div>
                  <div
                    class="cxd-Panel-body"
                  >
                    <form
                      class="cxd-Form cxd-Form--normal"
                      novalidate=""
                    >
                      <input
                        style="display: none;"
                        type="submit"
                      />
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="name"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                姓名：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="name"
                              placeholder=""
                              size="10"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Form-item cxd-Form-item--normal"
                        data-amis-name="email"
                        data-role="form-item"
                      >
                        <label
                          class="cxd-Form-label"
                        >
                          <span>
                            <span
                              class="cxd-TplField fr-view"
                            >
                              <span>
                                邮箱：
                              </span>
                            </span>
                          </span>
                        </label>
                        <div
                          class="cxd-Form-control cxd-TextControl"
                        >
                          <div
                            class="cxd-TextControl-input"
                          >
                            <input
                              autocomplete="off"
                              class=""
                              name="email"
                              placeholder=""
                              size="10"
                              type="email"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                  <div
                    class="cxd-Panel-footerWrap"
                  >
                    <div
                      class="cxd-Panel-btnToolbar cxd-Panel-footer"
                    >
                      <button
                        class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                        type="submit"
                      >
                        <span>
                          提交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
